<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Oceny">



    <TableRow android:id="@+id/row1"
        tools:ignore="UselessParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#543245"
        android:layout_marginHorizontal="10px"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/przedmiot"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oceny"
            android:textSize="26sp"

            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"
            android:textStyle="bold"/>

    </TableRow>

    <TableRow android:id="@+id/row2"
        tools:ignore="UselessParent"
        android:stretchColumns="1"
        android:background="#543245"
        android:layout_marginHorizontal="10px">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matematyka"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_1_1_2"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

    </TableRow>

    <TableRow android:id="@+id/row3"
        tools:ignore="UselessParent"
        android:stretchColumns="1"
        android:background="#543245"
        android:layout_marginHorizontal="10px">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j_polski"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_3_5_3"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

    </TableRow>

    <TableRow android:id="@+id/row4"
        tools:ignore="UselessParent"
        android:stretchColumns="1"
        android:background="#543245"
        android:layout_marginHorizontal="10px">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j_angielski"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_3_5_4"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

    </TableRow>

    <TableRow android:id="@+id/row5"
        tools:ignore="UselessParent"
        android:stretchColumns="1"
        android:background="#543245"
        android:layout_marginHorizontal="10px"
        >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informatyka"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_5_3_6"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

    </TableRow>


    <TableRow android:id="@+id/row6"
        tools:ignore="UselessParent"
        android:stretchColumns="1"
        android:background="#543245"
        android:layout_marginHorizontal="10px">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historia"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_5_5_4"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

    </TableRow>

    <TableRow android:id="@+id/row7"
        tools:ignore="UselessParent"
        android:stretchColumns="1"
        android:background="#543245"
        android:layout_marginHorizontal="10px"
        >

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fizyka"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_3_4_2"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

    </TableRow>

    <TableRow android:id="@+id/row8"
        tools:ignore="UselessParent"
        android:stretchColumns="1"
        android:background="#543245"
        android:layout_marginHorizontal="10px">

        <TextView
            android:id="@+id/textVie15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wf"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_6_3_6"
            android:textSize="26sp"
            android:textColor="#543245"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="2dp"/>

    </TableRow>

    </TableLayout>